# tapl

./: Cargo.toml  README.md
arith/: Cargo.toml
arith/src/: error.rs  eval.rs  main.rs  parser.rs  syntax.rs
bot/: Cargo.toml
bot/src/: eval.rs  main.rs  parser.rs  syntax.rs
cc/: Cargo.toml
cc/src/: eval.rs  main.rs  parser.rs  syntax.rs
fomsub/: Cargo.toml
fomsub/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullequirec/: Cargo.toml
fullequirec/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullerror/: Cargo.toml
fullerror/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullfomsub/: Cargo.toml
fullfomsub/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullfsub/: Cargo.toml
fullfsub/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullisorec/: Cargo.toml
fullisorec/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullomega/: Cargo.toml
fullomega/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullpoly/: Cargo.toml
fullpoly/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullrecon/: Cargo.toml
fullrecon/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullref/: Cargo.toml
fullref/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullsimple/: Cargo.toml
fullsimple/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullsub/: Cargo.toml
fullsub/src/: eval.rs  main.rs  parser.rs  syntax.rs
fulluntyped/: Cargo.toml
fulluntyped/src/: eval.rs  main.rs  parser.rs  syntax.rs
fullupdate/: Cargo.toml
fullupdate/src/: eval.rs  main.rs  parser.rs  syntax.rs
lf/: Cargo.toml
lf/src/: eval.rs  main.rs  parser.rs  syntax.rs
linear/: Cargo.toml
linear/src/: eval.rs  main.rs  parser.rs  syntax.rs
order/: Cargo.toml
order/src/: eval.rs  main.rs  parser.rs  syntax.rs
purefsub/: Cargo.toml
purefsub/src/: eval.rs  main.rs  parser.rs  syntax.rs
rcdsub/: Cargo.toml
rcdsub/src/: eval.rs  main.rs  parser.rs  syntax.rs
recon/: Cargo.toml
simplebool/: Cargo.toml
tyarith/: Cargo.toml
untyped/: Cargo.toml
util/: Cargo.toml
util-derive/: Cargo.toml
(+22 files in other folders)
