[workspace]
members = [
    "arith",
    "untyped",
    "util",
    "util-derive",
    "fulluntyped",
    "tyarith",
    "simplebool",
    "fullsimple",
    "fullref",
    "fullerror",
    "fullsub",
    "rcdsub",
    "bot",
    "fullequirec",
    "fullisorec",
    "recon",
    "fullrecon",
    "fullpoly",
    "fullfsub",
    "purefsub",
    "fullomega",
    "fullfomsub",
    "fomsub",
    "fullupdate",
]
resolver = "3"

[workspace.dependencies]
chumsky = "0.10.1"
rustyline = { version = "15.0.0", features = ["derive"] }
thiserror = "2.0.12"
util = { path = "util" }
util-derive = { path = "util-derive" }
