[workspace]
members = [
    "util",
    "util-derive",
    "arith",
    "untyped",
    "fulluntyped",
    "tyarith",
    "simplebool",
    "fullsimple",
    "fullref",
    "fullerror",
    "fullsub",
    "rcdsub",
    "bot",
    "fullequirec",
    "fullisorec",
    "recon",
    "fullrecon",
    "fullpoly",
    "fullfsub",
    "purefsub",
    "fullomega",
    "fullfomsub",
    "fomsub",
    "fullupdate",
    "linear",
    "order",
]
resolver = "3"

[workspace.dependencies]
chumsky = "0.12.0"
rustyline = { version = "18.0.0", features = ["derive"] }
thiserror = "2.0.18"
util = { path = "util" }
util-derive = { path = "util-derive" }
